src/objects/CS_Toggl_URLs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Detailed_Report__c</fullName>
        <label>Detailed Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Summary_Report__c</fullName>
        <label>Summary Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weekly_Report__c</fullName>
        <label>Weekly Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WorkSpace__c</fullName>
        <label>WorkSpace</label>
        <type>Url</type>
    </fields>
    <label>Toggl URL Settings</label>
</CustomObject>